Test with virtual threads
Signed-off-by: Ameziane H. <ameziane.hamlat@consensys.net>